--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Boolando</title>
 </head>
 
 <body>
     <header>
-        <div class="container">
-
+        <div class="container d-flex f-between">
+            <!-- lista tipologia vestiti -->
+            <div>
+                <ul class="d-flex">
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+            </div>
+            <!-- logo -->
+            <div>
+                <img id="logo" src="img/boolean-logo.png" alt="Logo">
+            </div>
+            <!-- lista icone -->
+            <div>
+                <ul class="d-flex">
+                    <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                </ul>
+            </div>
         </div>
     </header>
-
+    
     <main>
         <div class="container"></div>
     </main>
