--- a/index.html
+++ b/index.html
@@ -10,32 +10,166 @@
 
 <body>
     <header>
-        <div class="container d-flex f-between">
-            <!-- lista tipologia vestiti -->
-            <div>
-                <ul class="d-flex">
-                    <li><a href="#">Donna</a></li>
-                    <li><a href="#">Uomo</a></li>
-                    <li><a href="#">Bambini</a></li>
-                </ul>
-            </div>
-            <!-- logo -->
-            <div>
-                <img id="logo" src="img/boolean-logo.png" alt="Logo">
-            </div>
-            <!-- lista icone -->
-            <div>
-                <ul class="d-flex">
-                    <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
-                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
-                </ul>
+        <div class="head-wrapper">
+            <div class="container d-flex f-between">
+                <!-- lista tipologia vestiti -->
+                <div>
+                    <ul class="d-flex">
+                        <li><a href="#">Donna</a></li>
+                        <li><a href="#">Uomo</a></li>
+                        <li><a href="#">Bambini</a></li>
+                    </ul>
+                </div>
+                <!-- logo -->
+                <h1>
+                    <img id="logo" src="img/boolean-logo.png" alt="Logo">
+                </h1>
+                <!-- lista icone -->
+                <div>
+                    <ul class="d-flex">
+                        <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+                        <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
     
     <main>
-        <div class="container"></div>
+        <div class="container d-flex f-center">
+            <!-- prima card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/1.webp" alt="immagine maglietta levis relaxed">
+                        <img class="hov" src="img/1b.webp" alt="immagine maglietta levis relaxed-2">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                        <div class="labels">
+                            <span class="discount">-50%</span>
+                            <span class="sost">Sostenibilità</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Levi's</span>
+                        <h2>relaxed fit tee unisex</h2>
+                        <span class="act-price">14,99 &euro;</span><span>29,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+            <!-- seconda card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/2.webp" alt="immagine maglietta guess">
+                        <img class="hov" src="img/2b.webp" alt="immagine maglietta guess">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                        <div class="labels">
+                            <span class="discount">-30%</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Guess</span>
+                        <h2>roses tee</h2>
+                        <span class="act-price">20,99 &euro;</span><span>29,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+            <!-- terza card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/3.webp" alt="immagine vestiti color pastello">
+                        <img class="hov" src="img/3b.webp" alt="immagine vestiti color pastello-2">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                        <div class="labels">
+                            <span class="discount">-30%</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Come Zucchero Filato</span>
+                        <h2>voglia di colori pastello</h2>
+                        <span class="act-price">129,99 &euro;</span><span>184,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+            <!-- quarta card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/4.webp" alt="immagine maglietta levis simbolo rosso">
+                        <img class="hov" src="img/4b.webp" alt="immagine maglietta levis simbolo rosso-2">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                        <div class="labels">
+                            <span class="discount">-50%</span>
+                            <span class="sost">Sostenibilità</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Levis</span>
+                        <h2>tee unisex</h2>
+                        <span class="act-price">14,99 &euro;</span><span>29,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+            <!-- quinta card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/5.webp" alt="immagine vestito beige">
+                        <img class="hov" src="img/5b.webp" alt="immagine vestito beige-2">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Maya Deluxe</span>
+                        <h2>stripe bodice</h2>
+                        <span class="act-price">99,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+            <!-- sesta card -->
+            <div class="card-container">
+                <!-- inizio card -->
+                <div class="card">
+                    <div class="image-part">
+                        <img class="no-hov" src="img/6.webp" alt="immagine maglione nero">
+                        <img class="hov" src="img/6b.webp" alt="immagine maglione nero-2">
+                        <div class="heart">
+                            <span class="red-hov">&hearts;</span>
+                        </div>
+                        <div class="labels">
+                            <span class="sost">Sostenibilità</span>
+                        </div>
+                    </div>
+                    <div>
+                        <span>Esprit</span>
+                        <h2>maglione - black</h2>
+                        <span class="act-price">29,99 &euro;</span>
+                    </div>
+                </div>
+                <!-- fine card -->
+            </div>
+        </div>
     </main>
 
     <footer>
