--- a/index.html
+++ b/index.html
@@ -173,7 +173,26 @@
     </main>
 
     <footer>
-        <div class="container"></div>
+        <div class="container d-flex f-between">
+            <div class="left-side">
+                <h3>Boolando s.r.l</h3>
+                <ul class="d-flex">
+                    <li><a href="#">Informazioni legali</a></li>
+                    <li><a href="#">Informativa sulla privacy</a></li>
+                    <li><a href="#"> Diritto di recesso</a></li>
+                </ul>
+            </div>
+            <aside>
+                <h4>Trovaci anche su</h4>
+                <ul class="d-flex f-center">
+                    <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
+            </aside>
+        </div>
     </footer>
 </body>
 
