--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="head-wrapper">
-            <div class="container d-flex f-between">
+            <nav class="container d-flex f-between">
                 <!-- lista tipologia vestiti -->
                 <div>
                     <ul class="d-flex">
@@ -26,13 +26,13 @@
                 </h1>
                 <!-- lista icone -->
                 <div>
-                    <ul class="d-flex">
+                    <ul class="d-flex icons">
                         <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
                     </ul>
                 </div>
-            </div>
+            </nav>
         </div>
     </header>
     
