--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <!-- logo -->
                 <h1>
-                    <img id="logo" src="img/boolean-logo.png" alt="Logo">
+                    <img id="logo" src="img/boolean-logo.png" alt="Logo Boolando">
                 </h1>
                 <!-- lista icone -->
                 <div>
